--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="pimg1">
     <div class="ptext">
       <span class="border">
-        <a href="mailto:dowdallstephen@gmail.com">Contact me!</a>
+        <a href="mailto:#">Contact me!</a>
       </span>
     </div>
   </div>
